# Multi-Agent-Data-Analyst

./: .gitignore  Agent_v1.md  README.md  eval_improve_plan.md  pyproject.toml  requirements.txt
dataset/: eval_gold.json  questions.json  schema.json
multi_agent_analyst/: __init__.py
multi_agent_analyst/agents/: __init__.py  analyst.py  composer.py  critic.py  planner.py  query_agent.py
multi_agent_analyst/app/: cli.py
multi_agent_analyst/eval/: __init__.py  contracts.py  generate_gold.py  loader.py  normalize.py  reporting.py  run.py  scoring.py
multi_agent_analyst/graph/: __init__.py  pipeline.py
multi_agent_analyst/models/: __init__.py  contracts.py  state.py
multi_agent_analyst/prompts/: __init__.py  templates.py
multi_agent_analyst/tools/: __init__.py  dataset.py  executor.py
multi_agent_analyst/ui/: __init__.py  app.py  helpers.py
tests/: test_agents.py  test_dataset.py  test_eval_loader.py  test_eval_reporting.py  test_eval_run.py  test_eval_scoring.py  test_executor.py  test_models.py  test_pipeline.py  test_ui_helpers.py
